# fsv

./: ChangeLog  Makefile.am  README.rst  autogen.sh  configure.in
doc/: custom.dsl
lib/: README.gnome
po/: POTFILES.in
