CONFIG_FILES = \
	config/config.guess \
	config/config.sub \
	config/install-sh \
	config/missing \
	config/mkinstalldirs

EXTRA_DIST = config/config.rpath m4/ChangeLog  \
	$(CONFIG_FILES) \
	NOTES \
	TODO \
	fsv.spec \
	fsv.spec.in \
	fsv.wmconfig

SUBDIRS = debug doc lib po src

ACLOCAL_AMFLAGS = -I m4
